# WayRuler

./: Cargo.toml  LICENSE  NOTICE  PKGBUILD  README.md  wayruler.desktop
scripts/: generate-full-project-content.rs
src/: capture.rs  edge_detector.rs  main.rs  overlay.rs
src/utils/: helpers.rs
